k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-db
spec:
  podSelector:
    matchLabels:
      app: mongo
  ingress:
    - from:
      - podSelector:
        matchLabels:
          app: secure-app
  ports:
    - protocol: TCP
      port: 27017
